--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,8 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          :
+  provider: "google-universal"  
+  tracking_id: "UA-85090346-1"
 
 
 # Site Author
