--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   name             : "Zach Duey"
   avatar           : "zach-bio-photo.jpg"
   bio              : ""
-  location         : "Chicago, IL"
+  location         : "Philadelphia, PA"
   email            : "zachduey@gmail.com"
   uri              :
   bitbucket        :
